# cloud-backend-showcase

./: .gitignore  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: backend-checks.yml  backend-security-audit.yml  terragrunt.yml
application/backend/: Cargo.toml  Dockerfile
application/backend/src/: lib.rs  main.rs
application/backend/src/api/: mod.rs  user.rs
application/backend/src/configs/: mod.rs
application/backend/src/models/: mod.rs  user.rs
application/backend/src/repository/: mod.rs  surreal.rs
application/backend/tests/: integration_user.rs
automation/docs/: aws.md
automation/kubernetes/base/: aws-load-balancer-controller.yaml  backend.yaml  cert-manager.yaml  kustomization.yaml
automation/kubernetes/base/istio/: istio-base-crds.yaml  istio-base.yaml  istio-ingressgateway.yaml  istio-pilot-filters.yaml  istio-pilot.yaml  istio-sidecar.yaml
automation/kubernetes/development/: aws-load-balancer-controller-patch.yaml  backend-patch.yaml
automation/kubernetes/stage/: aws-load-balancer-controller-patch.yaml  backend-patch.yaml  backend.yaml  flux-image-repository.yaml  kustomization.yaml
automation/terragrunt/aws/: organization.account.hcl  organization.ou.hcl  organization.roles.hcl  organization.security.hcl  providers.tftpl  root.hcl  versions.tftpl
automation/terragrunt/gcp/: README.md  organization.bootstrap.hcl  organization.folder.hcl  organization.service-account.hcl  providers.tftpl  root.hcl  versions.tftpl
docs/diagram/: aws.drawio
(+35 files in other folders)
