[package]
authors = ["alexandertgtalbot@gmail.com"]
edition = "2021"
license = "MIT"
name = "backend"
publish = false
readme = "README.md"
repository = "https://github.com/alexandertgtalbot/cloud-backend-showcase"
version = "0.1.0"

[dependencies]
actix-web = { version = "4" }
async-trait = { version = "0.1.73" }
chrono = { version = "0.4.28" }
envconfig = { version = "0.10.0" }
env_logger = { version = "0.10.0" }
lazy_static = { version = "1.4.0" }
regex = { version = "1.9.5" }
serde = { version = "1.0.188", features = ["derive", "rc"] }
serde_json = { version = "1" }
surrealdb = { version = "1.0.0-beta.10", features = ["kv-mem"] }
validator = { version = "0.15", features = ["derive"] }
